github_data_collector/src/data/issue_comment/WrBug_dumpDex.txt

https://x.tongdun.cn/laboratory/androidConfusion
这个网站的,能支持吗
AILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:externalNativeBuildDebug'.
> Build command failed.
  Error while executing process E:\Soft\SDK\cmake\3.6.4111459\bin\cmake.exe with arguments {--build C:\Users\chinghua.liu\Desktop\dumpDex-master\app\.externalNativeBuild\cmake\debug\arm64-v8a --target nativeDump}
  [1/8] Building CXX object CMakeFiles/nativeDump.dir/src/main/cpp/native.cpp.o
  [2/8] Building C object CMakeFiles/nativeDump.dir/src/main/cpp/dlopen.c.o
  [3/8] Building C object CMakeFiles/nativeDump.dir/src/main/cpp/inlineHook.c.o
  [4/8] Building C object CMakeFiles/nativeDump.dir/src/main/cpp/relocate.c.o
  [5/8] Building CXX object CMakeFiles/nativeDump.dir/src/main/cpp/And64InlineHook.cpp.o
  [6/8] Building CXX object CMakeFiles/nativeDump.dir/src/main/cpp/util/deviceutils.cpp.o
  FAILED: E:\Soft\SDK\ndk-bundle\toolchains\llvm\prebuilt\windows-x86_64\bin\clang.exe  --target=aarch64-none-linux-android21 --gcc-toolchain=E:/Soft/SDK/ndk-bundle/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=E:/Soft/SDK/ndk-bundle/toolchains/llvm/prebuilt/windows-x86_64/sysroot -DnativeDump_EXPORTS -I/usr/include/aarch64-linux-android -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -fno-addrsig -Wa,--noexecstack -Wformat -Werror=format-security  -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/nativeDump.dir/src/main/cpp/dlopen.c.o -MF CMakeFiles\nativeDump.dir\src\main\cpp\dlopen.c.o.d -o CMakeFiles/nativeDump.dir/src/main/cpp/dlopen.c.o   -c C:\Users\chinghua.liu\Desktop\dumpDex-master\app\src\main\cpp\dlopen.c
  In file included from C:\Users\chinghua.liu\Desktop\dumpDex-master\app\src\main\cpp\dlopen.c:7:
  
  In file included from C:\Users\chinghua.liu\Desktop\dumpDex-master\app\src\main\cpp/dlopen.h:9:
  
  E:/Soft/SDK/ndk-bundle/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include\jni.h:1:1: error: unknown type name 'b'
  
  b<U+0014>#eF<U+0000><BA><U+0001><U+0000><U+0000><U+0000><U+0001>E-SafeNet<U+0000><U+0000><U+0000>LOCK<U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000>%<B6><B2>]X<99>f&<8A><U+0006><U+001E>gWn<92>m<U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><FE><U+001C><FA><C8>I<B3>|<U+0012><89><8F>g<F0>cj<F1>~<89>?X<U+0011>n<B0><U+001E>?<U+0011><A4><98>/<93><CA>?2<FB><FF><D6><CF><D2>=<E9>N<U+001D>R<U+000C>1<FF>N<E2>?<B5>?<88><AE><AA><U+0001>l<81><BF><DD>'n<FA><FB><94>?X<CC>qk
  
  ^
  
  E:/Soft/SDK/ndk-bundle/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include\jni.h:1:2: error: expected identifier or '('
  
  b<U+0014>#eF<U+0000><BA><U+0001><U+0000><U+0000><U+0000><U+0001>E-SafeNet<U+0000><U+0000><U+0000>LOCK<U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000>%<B6><B2>]X<99>f&<8A><U+0006><U+001E>gWn<92>m<U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><FE><U+001C><FA><C8>I<B3>|<U+0012><89><8F>g<F0>cj<F1>~<89>?X<U+0011>n<B0><U+001E>?<U+0011><A4><98>/<93><CA>?2<FB><FF><D6><CF><D2>=<E9>N<U+001D>R<U+000C>1<FF>N<E2>?<B5>?<88><AE><AA><U+0001>l<81><BF><DD>'n<FA><FB><94>?X<CC>qk
  
   ^

请问下几维安全的加固的apk能脱壳吗
有没有前辈指点一下啊？我下载了zip解压出来源码，用AndroidStudio3.1.2打开这个文件夹，之后出现了一批错误，例如：Cause: org.jetbrains.plugins.gradle.tooling.util.ModuleComponentIdentifierImpl.getModuleIdentifier()Lorg/gradle/api/artifacts/ModuleIdentifier;
好像是Gradle的问题，我怎么样才可以编译出来啊


我必须要吧gradle中
```gradle
ndk {
         abiFilters  "armeabi-v7a","arm64-v8a","armeabi"
 }
```
中 armeabi 去掉才能编译通过,但是去掉了无法生成对应so我在设备上安装会直接报错
打扰咨询一下作者，有没有研究这块了。